# trusty

./: .coveralls.yml  .gitignore  .npmignore  .travis.yml  Cargo.toml  README.md  package.json
src/: config.ts  prepend.js  trusty.ts
src/services/: list.ts  save.ts  use.ts
src/tests/: trusty.ts
tests/files/input/: TestFile.txt
tests/files/output/TestFolder/: Test2.txt  TestFolderFile.txt
