[package]
name = "trusty"
version = "1.0.0"
authors = ["Chris Cates <hello@chriscates.ca>"]
repository = "https://github.com/ChrisCates/trusty"
homepage = "https://github.com/ChrisCates/trusty"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/ChrisCates/trusty"
description = "Fully featured CLI Framework for Rust"

[dependencies]
